# useless-progress

./: MANIFEST.in  README.md  flake.nix  pyproject.toml
progbar/: __init__.py  phrases.txt
